syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcServices.UserManagement";

service CompanyService {
    rpc GetAllCompany (google.protobuf.Empty) returns (CompanyListResponse);
}

message CompanyDto {
    int32 CompanyId = 1;
    string CompanyName = 2;
    string LegalName = 3;
    string GstNumber = 4;
    string TinNumber = 5;
    string TanNumber = 6;
    string CstNumber = 7;
    int32 EntityId = 8;
}

message CompanyListResponse {
    repeated CompanyDto companies = 1;
}
